# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.16.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Default to SAVE_WORLD=true: I doubt that the world file is that
	  security relevant, and I guess many users don't know the feature.
	- Build system defaults to silent rules in case of >=automake-1.11.

*eix-0.16.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Allow optional #metadata-method(s) for cache method parse/ebuild,
	  if up-to-date metadata is found for the ebuild.
	  This speeds up things enormously if metadata is provided by an
	  overlay-maintainer (using: egencache --repo=foo --update).
	  Of course, it is still faster to use the metadata method directly.
	- Introduce CACHE_METHOD_PARSE to add the above automagically.
	- Internal change: merge cache methods parse and ebuild.
	- Fix memory leak in metadata.cc (aux was not freed in some cases).
	- Minor compatibility tweaks for gcc-4.4 and glibc-2.10

*eix-0.16.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add NLS support and experimental translation into German.
	- Add versionsort helper tool (and ./configure --enable-separate-tool)
	- Support $PROFILE/package.keywords and $PROFILE/package.unmask
	- Workaround setenv for http://bugs.gentoo.org/show_bug.cgi?id=267807
	- Use non-capital variable names in scripts.
	- Minor bugfixes in scripts.
	- Some autotools/preprocessor cleanup.
	- manpage: Make clear that overlays must be paths, not repo-names.
	- manpage: Give some examples for egencache hooks with eix-sync.

*eix-0.15.7
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Allow USE dependencies http://bugs.gentoo.org/show_bug.cgi?id=264798
	- Update citation reference for "portage with sqlite"
	- Introduce EXPORT_PORTDIR_OVERLAY to export a new PORTDIR_OVERLAY with
	  added/excluded overlays to deal with eclasses. This somewhat fixes
	  http://bugs.gentoo.org/show_bug.cgi?id=249843
	  and http://bugs.gentoo.org/show_bug.cgi?id=265854

*eix-0.15.6