@@ -29,6 +29,7 @@ Seemant Kulleen <seemant at gentoo.org>
 Mark J. Olah <mjo at cs.unm.edu>
 Kay Ramon "YakS" Sauter  <yaks-gentoo at users.sourceforge.net> (documentation)
 Stefan Schweizer <genstef at gentoo.org>
+Stuart Shelton <srcshelton at gmail.com>
 Charlie Shepherd <masterdriverz at gmail.com>
 tzopik <tzopik at gmail.com>
 Javier Villavicencio <the_paya at gentoo.org>
